<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/linear_container">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        />

    <EditText
        android:id="@+id/edt_check_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/prompt_check"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/edt_persons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/prompt_persons"
        android:inputType="number"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_tip"
        android:textSize="20sp"
        android:layout_margin="8dp"/>

    <Spinner
        android:id="@+id/spn_tip_percentage"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="24sp"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_donation"
        android:textSize="20sp"
        android:layout_margin="8dp"/>

    <RadioGroup
        android:id="@+id/rdg_donation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <RadioButton
            android:id="@+id/rdb_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rdb_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_date"
            android:textSize="20sp"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/edt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="DD/MMM/YY"
            android:layout_weight="0.6"
            android:focusable="false"
            android:textSize="24sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/calculate"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$ 0.0"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_bill_amount"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_bill_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$ 0.0"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_per_person"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_amount_per_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$ 0.0"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>